--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,10 @@
       <div class="form-group">
         <select class="custom-select" id="category">
           <option selected value="">All Categories</option>
-          <option value="Personal">Personal</option>
-          <option value="Product Review">Product Review</option>
-          <option value="Political">Political</option>
+          <option value="W">White</option>
+          <option value="B">Blue</option>
+          <option value="R ">Red</option>
+          <option value="G">Green</option>
         </select>
       </div>
     </div>
