--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,8 @@
         <select class="custom-select" id="category">
           <option selected value="">All Categories</option>
           <option value="W">White</option>
-          <option value="B">Blue</option>
+          <option value="B">Black</option>
+          <option value="U">Blue</option>
           <option value="R ">Red</option>
           <option value="G">Green</option>
         </select>
