working on left side

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Blog - Express</title>
@@ -9,6 +10,23 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-sm-8 col-xs-12">
+			<h2>bestusdeckus</h2>
+		</div>
+		<div class="col-md-8 col-sm-4 col-xs-12">
+			<div class="mainnav" role="navigation">
+				<div class="menu-main-container">
+					<ul id="menu-main" class="menu">
+						<li id="login">Login</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <body>
 	{{{ body }}}
 </body>
